--- a/free-docker-compose.yaml
+++ b/free-docker-compose.yaml
@@ -4,14 +4,14 @@ services:
     image: blkio10/explorer-free
     container_name: blk-explorer
     ports:
-        - ${EXPLORER_PORT}:8081
+        - 8081:8081
     environment:
         - JAVA_OPTS=
-        - EXPLORER_PORT=${EXPLORER_PORT}
+        - EXPLORER_PORT=8081
         - NODE_ENDPOINT=${NODE_ENDPOINT}
         - MONGO_CLIENT_URI=mongodb://mongodb:27017
         - MONGO_DB_NAME=blk-quorum-dev
-        - UI_IP="http://${EXPLORER_IP}:5000"
+        - UI_IP=http://${EXPLORER_IP}:${EXPLORER_UI_PORT}
     links:
         - mongodb
     depends_on:
@@ -21,11 +21,10 @@ services:
     image: blkio10/explorer-ui-free
     container_name: blk-explorer-ui
     ports:
-        - ${EXPLORER_UI_PORT}:5000
+        - 5000:5000
     environment:
-        - REACT_APP_EXPLORER="http://${EXPLORER_IP}:${EXPLORER_PORT}"
-    depends_on:
-        - REST
+        - REACT_APP_EXPLORER=http://${EXPLORER_IP}:8081
+
 
   mongodb:
     image: mongo:3.4.10
