fix for node on host machine

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,31 +2,31 @@ version: "2"
 services:
   REST:
     image: blkio10/explorer-free
-    container_name: blk-explorer
+    container_name: blk-explorer-free
     ports:
         - 8081:8081
     environment:
         - JAVA_OPTS=
         - EXPLORER_PORT=8081
         - NODE_ENDPOINT=${NODE_ENDPOINT}
-        - MONGO_CLIENT_URI=mongodb://mongodb:27017
+        - MONGO_CLIENT_URI=mongodb://localhost:28017
         - MONGO_DB_NAME=blk-quorum-dev
         - UI_IP=http://${EXPLORER_IP}:5000
-    links:
-        - mongodb
     depends_on:
         - mongodb
+    network_mode: "host"
 
   web:
     image: blkio10/explorer-ui-free
-    container_name: blk-explorer-ui
+    container_name: blk-explorer-ui-free
     ports:
         - 5000:5000
     environment:
         - REACT_APP_EXPLORER=http://${EXPLORER_IP}:8081
 
-
   mongodb:
     image: mongo:3.4.10
-    container_name: blk-mongodb
+    container_name: blk-mongodb-free
+    ports:
+        - 28017:27017
     entrypoint: mongod --smallfiles --logpath=/dev/null --bind_ip "0.0.0.0"
