changed localhost to host.internal

--- a/win-docker-compose.yaml
+++ b/win-docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - JAVA_OPTS=
       - EXPLORER_PORT=8081
       - NODE_ENDPOINT=${NODE_ENDPOINT}
-      - MONGO_CLIENT_URI=mongodb://docker.for.win.localhost:28017
+      - MONGO_CLIENT_URI=mongodb://docker.for.win.host.internal:28017
       - MONGO_DB_NAME=test
       - UI_IP=http://localhost:5000
     depends_on:
@@ -28,4 +28,4 @@ services:
     ports:
       - 5000:5000
     environment:
-      - REACT_APP_EXPLORER=http://docker.for.win.localhost:8081
+      - REACT_APP_EXPLORER=http://docker.for.win.host.internal:8081
