Fix the problem accessing port 8081 on Mac

--- a/mac-docker-compose.yaml
+++ b/mac-docker-compose.yaml
@@ -28,4 +28,4 @@ services:
     ports:
       - 5000:5000
     environment:
-      - REACT_APP_EXPLORER=http://docker.for.mac.host.internal:8081
+      - REACT_APP_EXPLORER=http://localhost:8081
